Switch | Add vam property to prevent weird alignements

--- a/src/scss/components/switch/_base.scss
+++ b/src/scss/components/switch/_base.scss
@@ -3,6 +3,7 @@
   position: relative;
   width: $switch-width;
   height: $switch-height;
+  vertical-align: middle;
   background-color: $gray-chateau;
   border-radius: $switch-height;
   cursor: pointer;
